tests/invalid/parse/manual_ex120.pts
prototype P {
    const int a;
}

function main() : void {
}
